@@ -2,6 +2,8 @@ Version 1.1.4 -- in progress
   * Enable better command_line documentation: ChoicesBuilder#add_help_line,
  	ChoicesBuilder#section, ChoicesBuilder#section_specific_to_script.
   * One Rakefile instead of two.
+  * Give up on using extensions/string: too many name conflicts, too hard to 
+    avoid. Facets didn't solve the problem.
 
 Version 1.1.3
   * Bugfix: PosixCommandLineSource was not uniformly treated as a 	
